--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "save-dev": "^0.0.1-security",
+    "styled-components": "^6.1.18",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
